--- a/assets/sass/layout/_navigation.scss
+++ b/assets/sass/layout/_navigation.scss
@@ -6,7 +6,7 @@
     align-items: flex-start;
     color: inherit;
     font-size: 2rem;
-    font-family: "Century Gothic", sans-serif;
+    font-family: Futura, "Century Gothic", sans-serif;
     font-weight: 800;
     .navbar-brand__art {
       font-size: $small;
