--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "Futura";
-  src: url("../../fonts/futura-medium-bt.ttf");
+  font-family: Futura;
+  src: url("../fonts/futura-medium-bt.ttf");
 }
 
 h2 {
